[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/bg_sky.png" type="Texture" id=1]
[ext_resource path="res://assets/images/bg_back.png" type="Texture" id=2]
[ext_resource path="res://src/Player.tscn" type="PackedScene" id=3]
[ext_resource path="res://Main.gd" type="Script" id=4]
[ext_resource path="res://src/enemy/Tako.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/tres/radio.tres" type="Theme" id=6]

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="Bg" type="Node2D" parent="."]

[node name="BgBack" type="Sprite" parent="Bg"]
position = Vector2( 512, 300 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 2 )

[node name="BgSky" type="Sprite" parent="Bg"]
position = Vector2( 512, 300 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 1 )

[node name="MainLayer" type="CanvasLayer" parent="."]

[node name="Player" parent="MainLayer" instance=ExtResource( 3 )]
position = Vector2( 96, 192 )

[node name="EnemyLayer" type="CanvasLayer" parent="."]

[node name="Tako" parent="EnemyLayer" instance=ExtResource( 5 )]
position = Vector2( 528, 392 )

[node name="ShotLayer" type="CanvasLayer" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="UILayer"]
margin_left = 896.0
margin_top = 8.0
margin_right = 1012.0
margin_bottom = 142.0

[node name="CheckBox" type="CheckBox" parent="UILayer/VBoxContainer"]
margin_right = 116.0
margin_bottom = 42.0
theme = ExtResource( 6 )
text = "追跡型A"

[node name="CheckBox2" type="CheckBox" parent="UILayer/VBoxContainer"]
margin_top = 46.0
margin_right = 116.0
margin_bottom = 88.0
theme = ExtResource( 6 )
text = "追跡型B"

[node name="CheckBox3" type="CheckBox" parent="UILayer/VBoxContainer"]
margin_top = 92.0
margin_right = 116.0
margin_bottom = 134.0
theme = ExtResource( 6 )
text = "追跡型C"
